--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Frontend Mentor | Intro component with sign up form</title>
 
-    <link rel="stylesheet" href="./src/style/style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <div class="container">
@@ -108,5 +108,5 @@
       </footer>
     </div>
   </body>
-  <script src="./dist/bundle.js"></script>
+  <script src="./bundle.js"></script>
 </html>
